# math_facts

./: .gitignore  Procfile  README.md  generate_content.py  math_app.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-pipeline.yml  ci.yml
config/: settings.py  urls.py
frontend/: analytics.html  index.html  utility_dashboard.html
frontend/components/: calculator_engine.html  leaderboard_modal.html  mastery_dashboard.html  navbar.html  share_modal.html
math_app/: admin.py  api.py  apps.py  models.py  tasks.py  test_frontend.py  tests.py  urls.py  views.py
math_app/migrations/: 0001_initial.py  0002_leaderboardentry_delete_mathprogress.py  0003_analyticssummary.py  0004_alter_analyticssummary_unique_together_and_more.py
math_app/static/css/: engine_effects.css  output.css
math_app/static/js/: engine.js
static/: README.md
static/css/: style.css
templates/: 404.html  500.html  about.html  addition_progress.html  base.html  faq.html  index.html  layout.html  multiplication_progress.html  practice.html  privacy.html  progress.html  robots.txt  sitemap.xml  start.html  terms.html
vue_client/: index.html  package-lock.json  package.json  vite.config.js
vue_client/src/: App.vue  QuestionFactory.js  QuestionFactory.test.js  router.js  style.css
vue_client/src/components/: LeaderboardModal.vue  MasteryDashboard.vue  NavBar.vue  ShareModal.vue
vue_client/src/views/: AboutView.vue  AnalyticsView.vue  FaqView.vue  GameView.vue  PrivacyView.vue  TermsView.vue
