[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math_facts"
version = "0.1.0"
description = "FastMathFacts Core Engine"

[tool.setuptools.packages.find]
# Explicitly tell setuptools which folders contain Python code to package
include = ["math_app", "config"]
# Explicitly ignore the frontend templates and Vue directories
exclude = ["frontend"]

[tool.ruff]
# Set the line length to 100 (fixes the E501 errors)
line-length = 100

# Ignore Django migration folders and dependencies
exclude = [
    "migrations",
    ".git",
    "__pycache__",
    "math_facts_venv",
    "node_modules"
]

[tool.ruff.lint]
# E = pycodestyle (like Flake8)
# F = pyflakes (like Flake8)
# I = isort (import sorting)
select = ["E", "F", "I"]